--- a/____prac____.ipynb
+++ b/____prac____.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "ecefd2f9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,167 @@
     "print(\"Is available to use cuda? : \",use_cuda)\n",
     "if use_cuda:\n",
     "    print(\"-> GPU number \",gpu_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a33a379e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.polynomial.legendre import leggauss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "32a6e5da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order=32\n",
+    "mu, leggaussweights = leggauss(order)\n",
+    "theta = np.arccos(mu)\n",
+    "phi = [np.pi * (k + 1 / 2) / order for k in range(2 * order)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a76622d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.99726386, -0.98561151, -0.96476226, -0.93490608, -0.89632116,\n",
+       "       -0.84936761, -0.7944838 , -0.73218212, -0.66304427, -0.58771576,\n",
+       "       -0.50689991, -0.42135128, -0.3318686 , -0.23928736, -0.14447196,\n",
+       "       -0.04830767,  0.04830767,  0.14447196,  0.23928736,  0.3318686 ,\n",
+       "        0.42135128,  0.50689991,  0.58771576,  0.66304427,  0.73218212,\n",
+       "        0.7944838 ,  0.84936761,  0.89632116,  0.93490608,  0.96476226,\n",
+       "        0.98561151,  0.99726386])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "236d9c3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.06760094, 2.97175081, 2.87533465, 2.77879065, 2.68219818,\n",
+       "       2.58558231, 2.48895341, 2.39231656, 2.29567452, 2.19902896,\n",
+       "       2.10238093, 2.00573113, 1.90908008, 1.81242815, 1.71577564,\n",
+       "       1.6191228 , 1.52246985, 1.42581701, 1.3291645 , 1.23251257,\n",
+       "       1.13586152, 1.03921173, 0.94256369, 0.84591813, 0.7492761 ,\n",
+       "       0.65263924, 0.55601034, 0.45939447, 0.36280201, 0.266258  ,\n",
+       "       0.16984185, 0.07399171])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b5e62e25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.04908738521234052,\n",
+       " 0.14726215563702155,\n",
+       " 0.2454369260617026,\n",
+       " 0.3436116964863836,\n",
+       " 0.44178646691106466,\n",
+       " 0.5399612373357456,\n",
+       " 0.6381360077604268,\n",
+       " 0.7363107781851077,\n",
+       " 0.8344855486097889,\n",
+       " 0.9326603190344698,\n",
+       " 1.030835089459151,\n",
+       " 1.1290098598838318,\n",
+       " 1.227184630308513,\n",
+       " 1.325359400733194,\n",
+       " 1.423534171157875,\n",
+       " 1.521708941582556,\n",
+       " 1.6198837120072371,\n",
+       " 1.718058482431918,\n",
+       " 1.8162332528565992,\n",
+       " 1.9144080232812801,\n",
+       " 2.012582793705961,\n",
+       " 2.110757564130642,\n",
+       " 2.2089323345553233,\n",
+       " 2.3071071049800045,\n",
+       " 2.405281875404685,\n",
+       " 2.5034566458293663,\n",
+       " 2.6016314162540475,\n",
+       " 2.6998061866787286,\n",
+       " 2.7979809571034093,\n",
+       " 2.8961557275280905,\n",
+       " 2.9943304979527716,\n",
+       " 3.0925052683774528,\n",
+       " 3.1906800388021335,\n",
+       " 3.2888548092268146,\n",
+       " 3.3870295796514958,\n",
+       " 3.485204350076177,\n",
+       " 3.5833791205008576,\n",
+       " 3.6815538909255388,\n",
+       " 3.77972866135022,\n",
+       " 3.877903431774901,\n",
+       " 3.9760782021995817,\n",
+       " 4.074252972624263,\n",
+       " 4.172427743048944,\n",
+       " 4.270602513473625,\n",
+       " 4.368777283898306,\n",
+       " 4.466952054322987,\n",
+       " 4.565126824747668,\n",
+       " 4.663301595172349,\n",
+       " 4.76147636559703,\n",
+       " 4.859651136021712,\n",
+       " 4.957825906446392,\n",
+       " 5.056000676871073,\n",
+       " 5.154175447295755,\n",
+       " 5.252350217720435,\n",
+       " 5.350524988145116,\n",
+       " 5.448699758569798,\n",
+       " 5.546874528994478,\n",
+       " 5.64504929941916,\n",
+       " 5.743224069843841,\n",
+       " 5.841398840268521,\n",
+       " 5.939573610693203,\n",
+       " 6.037748381117884,\n",
+       " 6.135923151542564,\n",
+       " 6.234097921967246]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi"
    ]
   },
   {
